--- a/madness/static/styles.css
+++ b/madness/static/styles.css
@@ -9,18 +9,37 @@ html {
   box-sizing: inherit;
 }
 
+body {
+  max-width: 960px;
+  margin: 0 auto;
+
+}
+
 nav {
+  background-color: brown;
   display:flex;
   width: 100%;
-  height: 2rem;
   justify-content: space-between;
-  align-items: center;
+}
+
+nav a {
+  text-decoration: none;
+  color: black;
 }
 
 nav h1 {
-  width: 20%;
+  font-size: 3.5rem;
+  padding: 1rem;
 }
 
 nav ul {
+  display: flex;
   list-style: none;
+}
+
+nav ul a {
+  font-size: 2.5rem;
+  padding: 1rem;
+  display: flex;
+
 }
