--- a/madness/templates/base.html
+++ b/madness/templates/base.html
@@ -2,9 +2,9 @@
 <title>{% block title %}{% endblock %} – Mountain of Madness</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 <nav>
-  <h1><a class="home" href="#">Mountain of Madness</a></h1>
+  <h1><a class="home" href="{{ url_for('index') }}">Mountain of Madness</a></h1>
   <ul>
-    <li><a href="#">Play</a></li>
+    <li><a href="{{ url_for('game.play') }}">Play</a></li>
     <li><a href="#">About</a></li>
   </ul>
 </nav>
