--- a/madness/templates/game/play.html
+++ b/madness/templates/game/play.html
@@ -1,8 +1,6 @@
 {% extends 'base.html' %}
 
-{% block header %}
-  <h1>{% block title %}Play{% endblock %}</h1>
-{% endblock %}
+{% block title %}Play{% endblock %}
 
 {% block content %}
   <article class=play>
@@ -13,7 +11,7 @@
   {% if not dead %}
   <form method="post">
     <label>Input an action:
-      <input type="text" name="action" required>
+      <input type="text" name="action" required autofocus>
       <input type="submit" name="submit-action" value="Take Action!">
     </label>
   </form>
