--- a/madness/templates/index.html
+++ b/madness/templates/index.html
@@ -6,7 +6,7 @@
 
 {% block content %}
   <p>The mountain awaits!</p>
-  <p>Press <a href="#">play</a> to begin your adventure.</p>
+  <p>Press <a href="{{ url_for('game.play') }}">play</a> to begin your adventure.</p>
   <p><a href="{{ url_for('auth.register') }}">Sign up</a> or <a href="{{ url_for('auth.login') }}">log in</a>
     to save your progress.</p>
 {% endblock %}
